--- a/arch.man
+++ b/arch.man
@@ -1,6 +1,6 @@
 Unix utility 'arch'
 
-The Unix utility 'arch' is responsible for displaying the architecture of the device, Hexagon(R)
+The Unix utility 'arch' is responsible for displaying the architecture of the device, Hexagon
 and utilities and does not accept arguments.
 
 USAGE:
@@ -23,4 +23,4 @@ LICENSE
 
 Licensed under BSD-3-Clause.
 
-Hexagonix                           [2.0 05/06/2022]
+Hexagonix                           [2.1 05/09/2023]
