--- a/init.man
+++ b/init.man
@@ -1,6 +1,6 @@
 Unix utility 'init'
 
-The Unix utility 'init' is responsible for initializing the Hexagonix(R) Operating System.
+The Unix utility 'init' is responsible for initializing the Hexagonix Operating System.
 When started, it configures a series of system environments, also starting the services and
 utilities specified in "/rc".
 
@@ -29,4 +29,4 @@ LICENSE
 
 Licensed under BSD-3-Clause.
 
-Hexagonix                           [2.1 12/01/2023]
+Hexagonix                           [2.2 05/09/2023]
