--- a/top.man
+++ b/top.man
@@ -10,9 +10,13 @@ top
 
 For more information, enter 'top ?' or 'top --help'.
 
+UPDATE:
+
+htop has been renamed to top on the Hexagonix System I.
+
 HISTORY
 
-This command appeared in the Hexagonix H1 (2016-2021).
+This command appeared in the Hexagonix H1 or in previous development versions (2015-2021).
 
 AUTHOR
 
@@ -22,4 +26,4 @@ LICENSE
 
 Licensed under BSD-3-Clause.
 
-Hexagonix                               [2.0 05/06/2022]
+Hexagonix                               [2.2 03/12/2023]
