--- a/echo.man
+++ b/echo.man
@@ -11,7 +11,7 @@ For more information, enter 'echo ?' or 'echo --help'.
 
 HISTORY
 
-This command appeared in the Hexagonix H1 (2016-2021).
+This command appeared in the Hexagonix H1 or in previous development versions (2015-2021).
 
 AUTHOR
 
@@ -21,4 +21,4 @@ LICENSE
 
 Licensed under BSD-3-Clause.
 
-Hexagonix                           [2.1 12/01/2023]
+Hexagonix                           [2.2 03/12/2023]
