--- a/hostname.man
+++ b/hostname.man
@@ -14,7 +14,7 @@ For more information, enter 'hostname ?' or 'hostname --help'.
 
 HISTORY
 
-This command appeared in the Hexagonix H1 (2016-2021).
+This command appeared in the Hexagonix H1 or in previous development versions (2015-2021).
 
 AUTHOR
 
@@ -24,4 +24,4 @@ LICENSE
 
 Licensed under BSD-3-Clause.
 
-Hexagonix                           [2.1 05/09/2023]
+Hexagonix                           [2.2 03/12/2023]
