--- a/init.man
+++ b/init.man
@@ -19,7 +19,7 @@ This utility presents no output to the user.
 
 HISTORY
 
-This command appeared in the Hexagonix H1 (2016-2021).
+This command appeared in the Hexagonix H1 or in previous development versions (2015-2021).
 
 AUTHOR
 
@@ -29,4 +29,4 @@ LICENSE
 
 Licensed under BSD-3-Clause.
 
-Hexagonix                           [2.2 05/09/2023]
+Hexagonix                           [2.3 03/12/2023]
