--- a/logind.man
+++ b/logind.man
@@ -17,7 +17,7 @@ No additional parameters are required.
 
 HISTORY
 
-This command appeared in the Hexagonix H1 (2016-2021).
+This command appeared in the Hexagonix H1 or in previous development versions (2015-2021).
 
 AUTHOR
 
@@ -27,4 +27,4 @@ LICENSE
 
 Licensed under BSD-3-Clause.
 
-Hexagonix                               [3.0 17/11/2022]
+Hexagonix                               [3.1 03/12/2023]
