--- a/lshapp.man
+++ b/lshapp.man
@@ -15,7 +15,7 @@ For more information, enter 'lshapp ?' or 'lshapp --help'.
 
 HISTORY
 
-This command appeared in the Hexagonix H1 (2016-2021).
+This command appeared in the Hexagonix H1 or in previous development versions (2015-2021).
 
 AUTHOR
 
@@ -25,4 +25,4 @@ LICENSE
 
 Licensed under BSD-3-Clause.
 
-Hexagonix                               [2.2 05/09/2023]
+Hexagonix                               [2.3 03/12/2023]
