--- a/mount.man
+++ b/mount.man
@@ -23,7 +23,7 @@ For more information, enter 'mount ?' or 'mount --help'.
 
 HISTORY
 
-This command appeared in the Hexagonix H1 (2016-2021).
+This command appeared in the Hexagonix H1 or in previous development versions (2015-2021).
 
 AUTHOR
 
@@ -33,4 +33,4 @@ LICENSE
 
 Licensed under BSD-3-Clause.
 
-Hexagonix                               [2.1 05/09/2023]
+Hexagonix                               [2.2 03/12/2023]
