--- a/rm.man
+++ b/rm.man
@@ -16,7 +16,7 @@ For more information, enter 'rm ?' or 'rm --help'.
 
 HISTORY
 
-This command appeared in the Hexagonix H1 (2016-2021).
+This command appeared in the Hexagonix H1 or in previous development versions (2015-2021).
 
 AUTHOR
 
@@ -26,4 +26,4 @@ LICENSE
 
 Licensed under BSD-3-Clause.
 
-Hexagonix                               [2.1 12/01/2023]
+Hexagonix                               [2.2 03/12/2023]
